--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   "homepage": "https://github.com/Chjchj123/TechNodeJSWeb#readme",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.2",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "mongoose": "^8.18.1",
+    "nodemon": "^3.1.10",
+    "path": "^0.12.7"
   }
 }
