--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
@@ -27,7 +28,9 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.18.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "path": "^0.12.7"
   }
