--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "randomstring": "^1.3.1"
   }
 }
