--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
-    "randomstring": "^1.3.1"
+    "randomstring": "^1.3.1",
+    "resend": "^6.5.2"
   }
 }
